Updated content of website index; updated margins

--- a/stylin.css
+++ b/stylin.css
@@ -1,7 +1,8 @@
 /* Style page for Nolan Nicholson's website */
 
 body {
-  margin-left: 36px;
+  margin-left: 48px;
+  margin-right: 200px;
   font-family: 'Merriweather', serif;
   font-weight: normal;
   font-size: 18px;
