Slightly modified colors on links

--- a/stylin.css
+++ b/stylin.css
@@ -10,11 +10,11 @@ body {
 }
 
 a, a:link {
-  color: #40bbff;
+  color: #40a8e8;
 }
 
 a:visited {
-  color: #328aba;
+  color: #4a63e0;
 }
 
 a:hover, a:focus {
