--- a/stylin.css
+++ b/stylin.css
@@ -14,6 +14,10 @@ p {
     max-width: 800px;
 }
 
+li {
+    max-width: 800px;
+}
+
 a, a:link {
     color: #40a8e8;
 }
@@ -34,6 +38,14 @@ h1 {
     font-weight: bold;
     font-size: 48px;
     margin-bottom: 0;
+}
+
+.codeholder {
+    background-color: #eee;
+    border-radius: 8px;
+    padding: 10px;
+    max-width: 800px;
+    padding-left: 24px;
 }
 
 #headercanvas {
