--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Home - Nolan Nicholson{% endblock %}
+
 {% block page_content %}
 
     <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
