--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nolan Nicholson</title>
+    <title>{% block title %}Nolan Nicholson{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
     <link rel="stylesheet" type="text/css" href="stylin.css">
