new title in fullscreen.html; koipond.html now uses templates

--- a/templates/koipond.html
+++ b/templates/koipond.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Fullscreen App Test - Nolan Nicholson{% endblock %}
+{% block title %}Koi Pond - Nolan Nicholson{% endblock %}
 
 {% block page_content %}
 
     <p align="center">
         <br>
-        <canvas id="maincanvas"
-            style="object-fit: fill; width: 640px; height: 480px;"></canvas>
+        <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/loadobj.js"></script>
-        <script src="scripts/fullscreen.js"></script>
+        <script src="scripts/koipond.js"></script>
         <br>
         <br>
     </p>
