--- a/stylin.css
+++ b/stylin.css
@@ -44,8 +44,11 @@ h1 {
     background-color: #f3f3f3;
     border-radius: 8px;
     padding: 4px;
+    display: table;
     max-width: 800px;
     padding-left: 24px;
+    padding-right: 24px;
+    font-size: 16px;
 }
 .highlight  { background: #f3f3f3; }
 .linenos {
