Added information about Pelican to pagerendering.html

--- a/templates/pagerendering.html
+++ b/templates/pagerendering.html
@@ -117,5 +117,20 @@
     I'd still be happy to have gotten the experience putting this together.
     </p>
 
+    <p>
+    <b>Edit:</b> After I posted this, a reader named Vitaly Potyarkin reached
+    out to tell me about 
+    <a href="https://blog.getpelican.com/">Pelican</a>, a more full-featured
+    static site generator written in Python.
+    Pelican does everything my solution above does and more:
+    it can take in input in reStructuredText or Markdown in addition to
+    HTML, it can perform syntax highlighting through Pygments, 
+    it handles metadata and localization (topics I didn't even touch on here),
+    and its architecture is open enough that you can easily extend its
+    functionality to handle anything it doesn't natively cover.
+    I'd likely recommend it over what I showed above - unless you are
+    extremely interested in rolling a minimal solution yourself.
+    </p>
+
 
 {% endblock %}
