Added toggle and randomize

--- a/templates/gameoflife.html
+++ b/templates/gameoflife.html
@@ -2,9 +2,17 @@
 {% block title %}Game of Life - Nolan Nicholson{% endblock %}
 
 {% block page_content %}
-<h2> The Game of Life</h1>
+<h2> Conway's Game of Life</h1>
+
+<p>
+<button id="btn-pauseplay">Start</button>
+<button id="btn-randomize">Randomize</button>
+</p>
 
 <table id="gol-table"></table>
 <script src="scripts/gameoflife.js"></script>
+<link rel="stylesheet" type="text/css" href="styles/gameoflife.css">
+
+<br />
     
 {% endblock %}
