step button; play button now works!

--- a/templates/gameoflife.html
+++ b/templates/gameoflife.html
@@ -6,6 +6,7 @@
 
 <p>
 <button id="btn-pauseplay">Start</button>
+<button id="btn-step">Step</button>
 <button id="btn-randomize">Randomize</button>
 </p>
 
