--- a/styles/gameoflife.css
+++ b/styles/gameoflife.css
@@ -12,6 +12,30 @@ td.gol.alive {
     background-color: #636;
 }
 
+td.gol.alive.age0 {
+    background-color: #f36;
+}
+
+td.gol.alive.age1 {
+    background-color: #c36;
+}
+
+td.gol.alive.age2 {
+    background-color: #936;
+}
+
+td.gol.dead.age0 {
+    background-color: #bbb;
+}
+
+td.gol.dead.age1 {
+    background-color: #c6c6c6;
+}
+
+td.gol.dead.age2 {
+    background-color: #cacaca;
+}
+
 td.gol.dead:hover {
     background-color: #caf;
 }
