--- a/templates/gameoflife.html
+++ b/templates/gameoflife.html
@@ -8,6 +8,7 @@
 <button id="btn-pauseplay">Start</button>
 <button id="btn-step">Step</button>
 <button id="btn-randomize">Randomize</button>
+<button id="btn-clear">Clear</button>
 </p>
 
 <table id="gol-table"></table>
