--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
     <p>
     <ul>
         <li>
+            2019-09-29 - <a href="gameoflife.html">Conway's Game of Life</a>
+        </li>
+        <li>
             2019-08-26 - <a href="pagerendering.html">Static Website Compilation</a>
         </li>
         <li>
