Added 'About' page for Game of Life

--- a/templates/gameoflife.html
+++ b/templates/gameoflife.html
@@ -5,6 +5,20 @@
 <h2> Conway's Game of Life</h1>
 
 <p>
+This is an implementation of
+<a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">
+    Conway's Game of Life</a>.
+You can use the buttons to control the whole board, and you can
+click on individual cells on the grid to toggle whether they are alive
+or dead.
+</p>
+
+<p>
+To read more on how this was implemented, click
+<a href="gameoflife_about.html">here</a>.
+</p>
+
+<p>
 <button id="btn-pauseplay">Start</button>
 <button id="btn-step">Step</button>
 <button id="btn-randomize">Randomize</button>
