--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
     <ul>
         <li>
             2019-09-29 - <a href="gameoflife.html">Conway's Game of Life</a>
+            | <a href="gameoflife_about.html">About</a>
         </li>
         <li>
             2019-08-26 - <a href="pagerendering.html">Static Website Compilation</a>
