add first draft of Looper blog post

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
     <p>
     <ul>
         <li>
+            2019-10-30 - <a href="looper.html">Looping Music Seamlessly</a>
+        </li>
+        <li>
             2019-09-29 - <a href="gameoflife.html">Conway's Game of Life</a>
             | <a href="gameoflife_about.html">About</a>
         </li>
