--- a/styles/main.css
+++ b/styles/main.css
@@ -72,3 +72,10 @@ h1 {
     display:inline-block;
     vertical-align: text-bottom;
 }
+
+.figure {
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
