--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Nolan Nicholson{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="styles/highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
