--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,9 @@
 
 {% block page_content %}
 
-    <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
-      <a href='https://github.com/NolanNicholson/'>GitHub</a>
+    <p class="grouped-links">
+    <a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
+    <a href='https://github.com/NolanNicholson/'>GitHub</a>
     </p>
       
     <p>
