--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@ body {
     font-weight: normal;
     font-size: 1.2em;
     color: #333333;
+    -webkit-text-size-adjust: 100%;
 }
 
 @media (min-width: 768px) {
