minor refactoring of clock page

--- a/templates/clock.html
+++ b/templates/clock.html
@@ -4,8 +4,8 @@
 {% block page_content %}
 
 <div id="clock">
-    <div id="clock-face-container">
-        <div id="clock-face-container-inner">
+    <div id="clock-container-outer">
+        <div id="clock-container-inner">
             <div id="clock-face">
                 <div id="hour-hand"></div>
                 <div id="minute-hand"></div>
