--- a/styles/clock.css
+++ b/styles/clock.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgba(32, 32, 32, 1.0);
+}
+
 .name a {
     color: lightgray;
     text-decoration: none;
@@ -10,13 +14,12 @@
     position: absolute;
     left: 0;
     top: 0;
-    background-color: rgba(32, 32, 32, 1.0);
     width: 100%;
     height: 100%;
     z-index: -2;
 }
 
-#clock-face-container {
+#clock-container-outer {
     left: 15%;
     top: 20%;
     display: inline-block;
@@ -24,7 +27,7 @@
     width: 70%;
 }
 
-#clock-face-container-inner {
+#clock-container-inner {
     margin-top: 100%;
 }
 
@@ -34,6 +37,11 @@
     border-radius: 50%;
     background-color: lightgray;
     z-index: -1;
+}
+
+.clock-number {
+    position: absolute;
+    text-align: center;
 }
 
 #hour-hand {
@@ -50,7 +58,7 @@
 
 #minute-hand {
     position: absolute;
-    height: 35%;
+    height: 40%;
     width: 4%;
     left: 48%;
     background-color: #333;
