--- a/styles/clock.css
+++ b/styles/clock.css
@@ -36,12 +36,14 @@ body {
     top: 0; bottom: 0; left: 0; right: 0;
     border-radius: 50%;
     background-color: lightgray;
-    z-index: -1;
+    z-index: -2;
 }
 
 .clock-number {
     position: absolute;
+    color: gray;
     text-align: center;
+    z-index: -2;
 }
 
 #hour-hand {
