--- a/styles/clock.css
+++ b/styles/clock.css
@@ -39,11 +39,22 @@ body {
     z-index: -2;
 }
 
-.clock-number {
+.clock-number-container {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    background-color: #dddddd;
     position: absolute;
-    color: gray;
-    text-align: center;
     z-index: -2;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+
+.clock-number {
+    margin: auto;
+    color: gray;
+    font-weight: bold;
+    font-size: 300%;
 }
 
 #hour-hand {
