--- a/styles/clock.css
+++ b/styles/clock.css
@@ -11,20 +11,15 @@ body {
 }
 
 #clock {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -2;
+    margin: 2em;
 }
 
 #clock-container-outer {
-    left: 15%;
-    top: 20%;
+    left: 0%;
+    top: 0%;
     display: inline-block;
     position: relative;
-    width: 70%;
+    width: 100%;
 }
 
 #clock-container-inner {
