put clock on index; headercube event listeners

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
     <p>
     <ul>
         <li>
+            2019-11-10 - <a href="clock.html">Desktop Clock</a>
+        </li>
+        <li>
             2019-10-27 - <a href="looper.html">Looping Music Seamlessly</a>
         </li>
         <li>
