--- a/styles/clock.css
+++ b/styles/clock.css
@@ -48,7 +48,13 @@ body {
 .clock-number {
     color: gray;
     font-weight: bold;
-    font-size: 300%;
+    font-size: 200%;
+}
+
+@media (min-width: 768px) {
+    .clock-number {
+        font-size: 300%;
+    }
 }
 
 .clock-tick {
