--- a/styles/latency_demo.css
+++ b/styles/latency_demo.css
@@ -13,7 +13,7 @@
 
 .game-container {
     width: 100%;
-    height: 40%;
+    height: 12em;
     position: relative;
 }
 
@@ -27,7 +27,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     font-weight: bold;
     font-family: sans-serif;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .latency-pane {
